# catan-representation-learning

./: .gitignore  IMPLEMENTACJA.md  README.md  benchmark_parallel.py  generate_dataset.py  generate_dataset_v2.py  main.py  nohup.out  notebook2-architectures.md  project-description.md  project-proposition.md  pyproject.toml  requirements-ml.txt  search-architectures.md  split_dataset.py  verify_dataset.py
data/: card_samples_00000_to_00999.parquet  card_samples_01000_to_01999.parquet  card_samples_02000_to_02999.parquet  card_samples_03000_to_03999.parquet  card_samples_04000_to_04999.parquet  card_samples_05000_to_05999.parquet  card_samples_06000_to_06999.parquet  card_samples_07000_to_07999.parquet  card_samples_08000_to_08999.parquet  card_samples_09000_to_09999.parquet  timesteps_00000_to_00999.parquet  timesteps_01000_to_01999.parquet  timesteps_02000_to_02999.parquet  timesteps_03000_to_03999.parquet  timesteps_04000_to_04999.parquet  timesteps_05000_to_05999.parquet  timesteps_06000_to_06999.parquet  timesteps_07000_to_07999.parquet  timesteps_08000_to_08999.parquet  timesteps_09000_to_09999.parquet
notebooks/: 01_eda.ipynb  01_eda.py  02_representation_learning.ipynb  02_representation_learning.py  03_vae_rssm.ipynb  03_vae_rssm.py  04_final_report.ipynb  04_final_report.py  05_project_summary.ipynb
src/: __init__.py  augment.py  baseline_heuristic.py  config.py  data.py  models.py  probe.py  search.py  ssl_barlow.py  ssl_infonce.py  ssl_mae.py  ssl_rssm.py  ssl_vae.py  supervised.py  supervised_seq.py  train_all.py  train_final.py
(+5 files in other folders)
