[project]
name = "catan-representation-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catanatron",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]

[tool.uv.sources]
catanatron = { workspace = true, editable = true }
