[project]
name = "catan-representation-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catanatron",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "torch>=2.2,<3.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "shap>=0.45",
    "statsmodels>=0.14",
    "umap-learn>=0.5.7",
]

[tool.uv]
# shap/umap on Python 3.11 otherwise resolve llvmlite 0.36 (py<3.10 only).
constraint-dependencies = ["llvmlite>=0.41.1", "numba>=0.59.0"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
catanatron = { path = "../catanatron", editable = true }
torch = { index = "pytorch-cu128" }
